@@ -3253,7 +3253,7 @@ you can install sshd with
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6155"/>
-        <source>Failed to start RDP or XMDCP client</source>
+        <source>Failed to start RDP or XDMCP client</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
